--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-    	"php": "^8.0",
-        "topthink/think-migration": "^3.0.3"
+    	"php": "^7.2|^8.0",
+        "topthink/think-migration": "^3.0.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0.0",
